--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,14 +2,64 @@
 title: Le Wagon - Middleman
 ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<!-- Banner -->
+<div class="banner overlay" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('images/the_house_that_pinterest_built.jpg')">
+  <div class="banner-content">
+    <h1>WELCOME HOME</h1>
+    <p>Rent unique places to stay from local hosts in 190+ countries.</p>
+    <a class="btn-medium" href="https://honestlywtf.com/home/the-house-that-pinterest-built/" target="_blank">Start Now</a>
+  </div>
+</div>
+
+<!-- Cards -->
+
+<div class="container">
+  <h2 class="text-center">What is your next trip?</h2>
+  <div class="cards">
+    <!-- Code your cards  here -->
+    <div class="card">
+      <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('images/paris-sur-seine.jpg')">
+        <p class="card-cat">PARIS</p>
+        <img class="avatar card-avatar" src="images/cara.png" alt="user_avatar">
+        <div class="card-description">
+          <p class="property-title">Cara's Home</p>
+          <p>Living Sur La Seine</p>
+        </div>
+      </div>
+      <div class="card-footer">
+        <p>Posted on 22/10/2017</p>
+        <a href="#"><i class="iconfont icon-like"></i></a>
+      </div>
+    </div>
+    <!-- Code your cards  here -->
+    <div class="card">
+      <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('images/minimal_loft.jpg')">
+        <p class="card-cat">NEW YORK</p>
+        <img class="avatar card-avatar" src="images/gigi.png" alt="user_avatar">
+        <div class="card-description">
+          <p class="property-title">Gigi's Home</p>
+          <p>Minimal Manhatten Home</p>
+        </div>
+      </div>
+      <div class="card-footer">
+        <p>Posted on 22/10/2017</p>
+        <a href="#"><i class="iconfont icon-like"></i></a>
+      </div>
+    </div>
+    <!-- Code your cards  here -->
+    <div class="card">
+      <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('images/farmhouse.jpg')">
+        <p class="card-cat">LOS ANGELOS</p>
+        <img class="avatar card-avatar" src="images/adwoa.png" alt="user_avatar">
+        <div class="card-description">
+          <p class="property-title">Adwoa's Home</p>
+          <p>Fab Farmhouse</p>
+        </div>
+      </div>
+      <div class="card-footer">
+        <p>Posted on 22/10/2017</p>
+        <a href="#"><i class="iconfont icon-like"></i></a>
+      </div>
+    </div>
   </div>
 </div>
