--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -58,10 +58,10 @@
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
-}
-.navbar-wagon-dropdown-menu li > a:hover {
-  background: transparent !important;
-  color: black !important;
+  &:hover{
+    background: transparent !important;
+    color: black !important;
+  }
 }
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
