--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -6,5 +6,8 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
+$black: #000;
+$gray: #454545;
+$gray-med: #9F9F9F;
 $light-gray: #F4F4F4;
+$white: #FFFFFF;
